syntax = "proto3";

package nbiot_e2e;

option go_package = "github.com/telenordigital/nbiot-e2e/server/pb";

import "nanopb/generator/proto/nanopb.proto";

message Message {
	oneof message {
		PingMessage ping_message = 1;
	}
}

message PingMessage {
	reserved 2;
	uint32 sequence = 1;
	float rssi = 3;
	uint32 nbiot_lib_hash = 4;
	uint32 e2e_hash = 5;
}
